--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,24 @@
 
 /* ==============----- Table ==============--- */
 .table {
-    margin-top: 16px;
+    padding: 16px 4px 0;
     width: 100%;
+    background-color: var(--card_color);
+    transition: .6s ease;
+}
+
+#water-mark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    padding: 16px;
+    text-align: center;
+}
+#water-mark i {
+    display: block;
+    padding-right: 12px;
+    font-size: 20px;
 }
 
 .table .first-row {
@@ -37,10 +53,14 @@
     text-align: center;
     margin: 0;
     font-size: 13px;
+    transition: .6s ease;
+    border-left: 1px solid var(--bg-color);
+
 }
 
 .table .tr {
     margin: 0;
+    border-left: 1px solid var(--text_color);
 }
 
 .table-wrap {
@@ -62,8 +82,8 @@
 }
 
 .tr:hover .td {
-    border: 1px solid var(--purple);
     transition: .3s ease;
+    border-color: var(--purple);
 }
 
 .th {
@@ -74,7 +94,8 @@
     justify-content: center;
 }
 .td {
-    border: 1px solid var(--text_color);
+    border-right: 1px solid var(--text_color);
+    border-bottom: 1px solid var(--text_color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,7 +116,8 @@ input[type="text"] {
     font-size: 16px;
     background-color: var(--card_color);
     color: var(--text_color);
-    transition: .1s ease;
+    transition: .6s ease;
+    transition: background-color .6s ease;
 }
 input[type="number"] {
     width: 100%;
@@ -105,7 +127,8 @@ input[type="number"] {
     font-size: 16px;
     background-color: var(--card_color);
     color: var(--text_color);
-    transition: .1s ease;
+    transition: .6s ease;
+    transition: background-color .6s ease;
 
     /*Loại bỏ nút mũi tên input: number
      cho trình duyệt firefox*/
@@ -157,7 +180,8 @@ select {
     border: 2px solid var(--purple);
     border-radius: 5px;
     cursor: pointer;
-    transition: .1s ease;
+    transition: .6s ease;
+    transition: background-color .6s ease;
 
     background: url('../img/drop-down-black.png') no-repeat;
     background-color: var(--card_color);
