--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -91,8 +91,14 @@ background: #555;
     margin-top: 120px;
 }
 
+#navbar .logo-container a {
+    display: block;
+    height: 100%;
+}
+
 #navbar .logo-container img {
     height: 100%;
+    max-height: 48px;
 }
 
 #navbar .nav-menu {
