--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +18,8 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     background-color: var(--bg-color);
     transition: background-color .6s ease;
     scroll-behavior: smooth; /*Trình duyệt cuộn mượt hơn*/
@@ -37,7 +40,7 @@ body {
     width: 6px;
     height: 6px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
 background: var(--purple); 
@@ -147,6 +150,7 @@ background: #555;
 #navbar .dark-mode-wrap p {
     font-size: 13px;
     padding-right: 8px;
+    color: var(--icon-color);
 }
 
 #navbar .dark-mode-wrap i {
@@ -316,6 +320,7 @@ background: #555;
     background-color: #303855;
     border-radius: 20px;
     color: #7F89B0;
+    font-size: 13px;
 }
 .sub-menu .nav-contact .brand-logo {
     display: flex;
@@ -365,6 +370,7 @@ background: #555;
 
 #footer .footer-wrap p {
     color: #7F89B0;
+    font-size: 13px;
 }
 
 #footer .brand-logo {
