--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@
     font-size: 12px;
     padding: 16px;
     text-align: center;
+    color: var(--text_color);
 }
 #water-mark i {
     display: block;
@@ -116,6 +117,7 @@
 .td p {
     padding: 8px;
     text-align: center;
+    color: var(--text_color);
 }
 
 
@@ -225,16 +227,25 @@ select:hover {
 }
 
 .input-wraper .training {
-    opacity: 0.5;
+    padding: 16px;
+    background-color: #f7f8fa;
+    border-radius: 5px;
+    margin-bottom: 38px;
 }
 
-.input-wraper .training h4, p {
-    color: var(--text_color);
+.input-wraper .training h5 {
+    display: inline-block;
+    padding: 4px 12px;
+    border-radius: 20px;
+    font-weight: 600;
+    color: #fff;
+    background-color: var(--purple);
 }
 
 .input-wraper .training p {
+    color: var(--text_color);
     font-size: 13px;
-    margin: 8px 0 24px;
+    margin-top: 12px;
 }
 
 .input-wraper .input-container label {
@@ -305,15 +316,15 @@ select:hover {
 }
 
 
-
-
 .output .table-label {
     margin: 0;
     text-transform: uppercase;
     text-align: center;
+    color: var(--text_color);
 }
 .output .label-desc {
     text-align: center;
+    color: var(--text_color);
     font-size: 13px;
     line-height: 1.6;
 }
@@ -469,6 +480,7 @@ select:hover {
 }
 
 .intro .intro-wrap {
+    padding: 50px 0;
     background-color: var(--card_color);
     transition: background-color .6s ease;
     border-radius: 10px;
@@ -478,7 +490,7 @@ select:hover {
     padding: 0 16px;
 }
 
-.intro .intro-wrap .text-wrap p, h3 {
+.intro .intro-wrap .text-wrap p {
     margin-top: 16px;
     line-height: 1.6;
     color: var(--text_color);
@@ -490,7 +502,6 @@ select:hover {
 
 .intro .intro-wrap .text-wrap h3 {
     font-size: 18px;
-    margin-top: 24px;
     line-height: 1.6;
     color: var(--text_color);
 }
@@ -498,7 +509,6 @@ select:hover {
 .intro .intro-wrap  .img-wrap {
     width: 100%;
     height: 350px;
-    padding: 16px;
 }
 
 .intro .intro-wrap  .img-wrap img {
