--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@
     text-decoration: none;
     text-align: center;
     transition: .1s ease;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
 .button:hover {
@@ -79,6 +81,7 @@
 .table-wrap {
     width: 100%;
     overflow-x: auto;
+    padding-left: 32px;
 }
 
 .table-output {
@@ -262,6 +265,7 @@ select:hover {
     margin-top: 16px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     flex-wrap: wrap;
 }
 
@@ -295,27 +299,6 @@ select:hover {
     position: relative;
 }
 
-.output #photo-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 100px;
-    max-width: 120px;
-    font-size: 13px;
-    background-color: rgba(0, 0, 0, 0);
-    border: 2px solid var(--purple);
-    color: var(--text_color);
-    padding: 8px;
-}
-.output #photo-btn i {
-    font-size: 18px;
-    padding-left: 8px;
-}
-.output #photo-btn:hover i {
-    color: var(--purple);
-}
-
-
 .output .table-label {
     margin: 0;
     text-transform: uppercase;
@@ -339,54 +322,90 @@ select:hover {
 }
 
 /*-------- Remove section -------*/
-.output .remove {
-    margin-top: 36px;
+.index-cell {
+    position: relative;
 }
 
-.output .remove .label-wrap {
-    height: 48px;
+.remove-icon-wrap {
+    width: 36px;
+    position: absolute;
+    top: 50%;
+    left: -36px;
+    transform: translateY(-50%);
+    display: block;
+}
+
+.remove-icon {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    color: #333;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+.remove-icon span {
+    margin: 0;
+}
+
+.remove-icon:hover {
+    background-color: #ddd;
+}
+
+
+.output .output-controls {
+    margin-top: 36px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
-.output .remove .label-wrap i, span {
-    margin-right: 8px;
-    font-size: 16px;
-}
-.output .remove label {
+
+.output #photo-btn {
+    height: 47px;
+    min-width: 150px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 13px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid var(--purple);
     color: var(--text_color);
+    margin-right: 16px;
+}
+.output #photo-btn i {
+    font-size: 18px;
+    padding-left: 8px;
+}
+.output #photo-btn:hover i {
+    color: var(--purple);
 }
 
-.output .remove #input-remove {
-    width: 100%;
-    border-radius: 5px 0 0 5px;
-    padding: 12px 16px;
-}
 
-.output .remove #remove-btn {
-    border-radius: 0 5px 5px 0;
-    width: 100%;
-}
-
-.output .remove .reset-wrap {
+.output .output-controls .reset-wrap {
     display: flex;
     justify-content: flex-end;
 }
 
-.output .remove #reset-btn {
+.output .output-controls #reset-btn {
     max-width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.output .remove #reset-btn i {
+.output .output-controls #reset-btn i {
     padding-left: 8px;
     font-size: 16px;
 }
 
 /* ==============- Confirm remove ---------- */
-.remove .confirm-remove {
+.output-controls .confirm-remove {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.4);
     top: 0;
@@ -406,13 +425,13 @@ select:hover {
     }
 }
 
-.remove .show {
+.output-controls .show {
     display: block;
 }
 
 
 
-.remove .confirm-remove .confirm-wrap {
+.output-controls .confirm-remove .confirm-wrap {
     background-color: #fff;
     position: absolute;
     top: 50%;
@@ -436,7 +455,7 @@ select:hover {
     }
 }
 
-.remove .confirm-remove .confirm-wrap h3 {
+.output-controls .confirm-remove .confirm-wrap h3 {
     margin: 0;
     text-align: center;
 }
