--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,15 @@
     padding: 14px 16px;
     font-size: 16px;
     border-radius: 5px;
-    appearance: none;
     cursor: pointer;
     text-decoration: none;
     text-align: center;
     transition: .1s ease;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .button:hover {
