--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,7 @@ input[type="text"] {
     background-color: var(--card_color);
     color: var(--text_color);
     transition: .6s ease;
+    appearance: none;
     /* transition: background-color .6s ease; */
 }
 input[type="number"] {
@@ -149,9 +150,10 @@ input[type="number"] {
     color: var(--text_color);
     transition: .6s ease;
     /* transition: background-color .6s ease; */
-
+    
     /*Loại bỏ nút mũi tên input: number
     cho trình duyệt firefox*/
+    appearance: none;
     appearance: textfield;
 }
 
