--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,7 @@
 input[type="text"] {
     width: 100%;
     border: 2px solid var(--purple);
+    outline: none;
     border-radius: 5px;
     padding: 12px 16px;
     font-size: 16px;
@@ -143,6 +144,7 @@ input[type="text"] {
 input[type="number"] {
     width: 100%;
     border: 2px solid var(--purple);
+    outline: none;
     border-radius: 5px;
     padding: 12px 16px;
     font-size: 16px;
